--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,3 @@
-== README
+# Keep Your Friends Close
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+KYFC is an applicationn that our group created as a final project for Dev Bootcamp. We built it in rails. To get it started, deploy it like any other application. You will also need a websocket server to propagate messages. You can see an example of one such server here: https://github.com/sorenpeterson/kyfcws
